--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -53,7 +53,7 @@
 		width: 60%
 		overflow-y: scroll
 		-webkit-overflow-scrolling: touch
-		webkit-transform: translate3d(0,0,0)
+		-webkit-transform: translateZ(0)
 		z-index: 1
 		box-shadow: 2px 0 2px 0 rgba(0, 0, 0, 0.1)
 		border-right: 1px solid #ccc
@@ -71,6 +71,7 @@
 			box-sizing: border-box
 			padding: 15px
 			border-left: 1px solid #eee
+			-webkit-transform: translateZ(0)
 
 			.label-required
 				position: absolute
@@ -166,7 +167,7 @@
 
 			p
 				float: right
-				margin: -27px 0 0 0
+				margin: 0
 
 				.btn
 					float: right
